Created subproject for the gradle-core.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1773 004c2c75-fc45-0410-b1a2-da8352e2331b